<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:background="#ECECEC"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/instruction"
        android:textAllCaps="true"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#000000"
        android:textSize="30sp"
        android:typeface="serif"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/tapInput"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="#ff123456"
        android:onClick="buttonClick"
        android:padding="20dp"
        android:text="@string/tap"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/motionbutton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="#ff123456"
        android:onClick="buttonClick"
        android:padding="20dp"
        android:text="@string/motion"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/voicebutton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="#ff123456"
        android:onClick="buttonClick"
        android:padding="20dp"
        android:text="@string/voice"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/exitbutton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="#ff123456"
        android:onClick="buttonClick"
        android:padding="20dp"
        android:text="@string/exit"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="20dp"
        android:src="@drawable/front_page_icon" />

</LinearLayout>